--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,2 +1,48 @@
 
 @import 'core/reset';
+
+.page {
+    margin: 0;
+}
+.headerbackground {
+    background-image: url("../images/cover.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.container_1 {
+   
+    // margin: 0 15px;
+    // background-color: blue;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.container {
+    margin: 0 15px;
+    background-color: blue;
+}
+.logo {
+    position: fixed;
+    top: 0;
+
+    width: 44px;
+    height: 44px;
+    background-color:#0271bc;
+}
+.header_logo {
+    width: 16px;
+    height: 14px;
+    margin-top: 15px;
+    margin-left: 14px;
+}
+.text {
+    color:#ffffff;
+    font-size: 42px;
+    text-transform:uppercase;
+    text-align: center;
+}
+.text2 {
+    color:#ffffff;
+    text-align: center;
+}
