--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,7 +6,7 @@
 }
 .headerbackground {
     background-image: url("../images/cover.jpg");
-    background-position: center;
+    background-position: top;
     background-repeat: no-repeat;
 }
 .container_1 {
@@ -16,16 +16,16 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
+    // flex-wrap: wrap;
     justify-content: center;
 }
 .container {
     margin: 0 15px;
     background-color: blue;
 }
-.logo {
+.container_1--logo {
     position: fixed;
     top: 0;
-
     width: 44px;
     height: 44px;
     background-color:#0271bc;
@@ -36,13 +36,36 @@
     margin-top: 15px;
     margin-left: 14px;
 }
-.text {
+.h1-text {
+    font-family: 'Roboto Slab',sans-serif;
     color:#ffffff;
     font-size: 42px;
+    font-weight: bold;
     text-transform:uppercase;
     text-align: center;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-bottom: 10px;
+    margin-top: 284px;
+    // line-height: 55px;
 }
-.text2 {
+.h5-text {
+    font-family:'Roboto-Regular', sans-serif;
     color:#ffffff;
+    font-size: 16px;
     text-align: center;
+    margin-bottom: 45px;
+
+}
+.container_1--img {
+    width: 45px;
+    height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:#ffffff;
+    border-radius: 50%;
+    margin-left: 160px;
+    margin-bottom: 53p;
+    
 }
