--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,7 +21,7 @@
 }
 .container {
     margin: 0 15px;
-    background-color: blue;
+    // background-color: blue;
 }
 .container_1--logo {
     position: fixed;
@@ -66,6 +66,60 @@
     background-color:#ffffff;
     border-radius: 50%;
     margin-left: 160px;
-    margin-bottom: 53p;
+    margin-bottom: 53px;
     
+}
+.main__container {
+    height:376px ;
+    display: flex;
+    flex-direction:column;
+    justify-content: left;
+
+}
+.main__container--tips {
+    font-family:'Roboto-Regular', sans-serif;
+    font-size: 14px;
+    color: #8ccbea;
+    margin-top: 30px;
+    width: 90px;
+    height: 30px;
+    margin-bottom: 1px;
+    text-transform: capitalize;
+}
+.main__container--title {
+    font-family:"Roboto Slab",sans-serif;
+    font-weight: bold;
+    font-size: 24px;
+    text-transform: capitalize; 
+    color: #000000;
+    width: 290px;
+    height: 60px;
+    margin-bottom: 1px;
+    line-height: 30px;
+}
+.main__container--text {
+    font-family:'Roboto-Regular',sans-serif;
+    font-size: 18px; 
+    color: #4a4a4a;
+    width: 290px;
+    height: 120px;
+    margin-top: 15px;
+    margin-bottom:30px;
+}
+.main__container--button {
+    width: 76px;
+    height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:#ffffff;
+    border: 2px solid #f26002 ;
+    border-radius: 23px;
+    margin-bottom: 45px;
+}
+.container__button {
+    font-family:'Roboto-Medium',sans-serif;
+    color:#f26002;
+    size: 20px;
+    padding: 0 25px 0 26px; 
 }
