--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,41 +1,47 @@
-
 @import 'core/reset';
+
+/* page */
 
 .page {
     margin: 0;
 }
+
+/* header */
+
 .headerbackground {
     background-image: url("../images/cover.jpg");
     background-position: top;
     background-repeat: no-repeat;
+    min-width: 300px;
 }
+
 .container_1 {
-   
-    // margin: 0 15px;
     // background-color: blue;
-    height: 100vh;
+    margin: 0 15px;
+    //width: 100%;
     display: flex;
     flex-direction: column;
-    // flex-wrap: wrap;
+    flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
 }
-.container {
-    margin: 0 15px;
-    // background-color: blue;
-}
-.container_1--logo {
+
+.container1__nav {
     position: fixed;
-    top: 0;
+    top: 0px;
+    left:0px ;
     width: 44px;
     height: 44px;
     background-color:#0271bc;
 }
+
 .header_logo {
     width: 16px;
     height: 14px;
     margin-top: 15px;
     margin-left: 14px;
 }
+
 .h1-text {
     font-family: 'Roboto Slab',sans-serif;
     color:#ffffff;
@@ -43,11 +49,13 @@
     font-weight: bold;
     text-transform:uppercase;
     text-align: center;
-    margin-left: 15px;
-    margin-right: 15px;
+    // width: 435px;
+    margin-left: auto;
+    margin-right: auto;
     margin-bottom: 10px;
     margin-top: 284px;
     // line-height: 55px;
+    
 }
 .h5-text {
     font-family:'Roboto-Regular', sans-serif;
@@ -57,26 +65,29 @@
     margin-bottom: 45px;
 
 }
-.container_1--img {
+.container_1--img{
     width: 45px;
     height: 45px;
-    display: flex;
     justify-content: center;
     align-items: center;
     background-color:#ffffff;
     border-radius: 50%;
-    margin-left: 160px;
     margin-bottom: 53px;
-    
+   }
+ /* main*/
+
+.container {
+    margin: 0 15px;
+    // background-color: blue;
 }
-.main__container {
+.section__container {
     height:376px ;
     display: flex;
     flex-direction:column;
     justify-content: left;
 
 }
-.main__container--tips {
+.section__container--tips {
     font-family:'Roboto-Regular', sans-serif;
     font-size: 14px;
     color: #8ccbea;
@@ -86,7 +97,7 @@
     margin-bottom: 1px;
     text-transform: capitalize;
 }
-.main__container--title {
+.section__container--title {
     font-family:"Roboto Slab",sans-serif;
     font-weight: bold;
     font-size: 24px;
@@ -97,16 +108,16 @@
     margin-bottom: 1px;
     line-height: 30px;
 }
-.main__container--text {
+.section__container--text {
     font-family:'Roboto-Regular',sans-serif;
     font-size: 18px; 
     color: #4a4a4a;
-    width: 290px;
-    height: 120px;
+    // width: 290px;
+    // height: 120px;
     margin-top: 15px;
     margin-bottom:30px;
 }
-.main__container--button {
+.section__container--button {
     width: 76px;
     height: 45px;
     display: flex;
