--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,9 +16,7 @@
 }
 
 .container_1 {
-    // background-color: blue;
     margin: 0 15px;
-    //width: 100%;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -49,12 +47,10 @@
     font-weight: bold;
     text-transform:uppercase;
     text-align: center;
-    // width: 435px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 10px;
     margin-top: 284px;
-    // line-height: 55px;
     
 }
 .h5-text {
@@ -67,12 +63,13 @@
 }
 .container_1--img{
     width: 45px;
-    height: 45px;
+    height: 45px;display: flex;
     justify-content: center;
     align-items: center;
     background-color:#ffffff;
     border-radius: 50%;
     margin-bottom: 53px;
+    
    }
  /* main*/
 
@@ -208,6 +205,21 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+.container_3--img {
+    width: 45px;
+    height: 45px;display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:#ffffff;
+    border-radius: 50%;
+    margin-bottom: 53px;
+    transform: translate(0, -50%);
+    position: relative;
+    left: 147px;
+   
+
+
 }
     
 .footer__nav {
