--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,4 @@
-@import 'core/reset';
+ @import 'core/reset';
 
 /* page */
 
@@ -63,7 +63,8 @@
 }
 .container_1--img{
     width: 45px;
-    height: 45px;display: flex;
+    height: 45px;
+    display: flex;
     justify-content: center;
     align-items: center;
     background-color:#ffffff;
@@ -75,7 +76,7 @@
 
 .container {
     margin: 0 15px;
-    // background-color: blue;
+    //background-color: blue;
 }
 .section__container2 {
     height:376px ;
@@ -89,7 +90,7 @@
     font-size: 14px;
     color: #8ccbea;
     margin-top: 30px;
-    width: 90px;
+    width: 100px;
     height: 30px;
     margin-bottom: 1px;
     text-transform: capitalize;
@@ -107,10 +108,12 @@
 }
 .section__container--text {
     font-family:'Roboto-Regular',sans-serif;
-    font-size: 18px; 
+    font-size: 18px;
+    line-height: 30px;
     color: #4a4a4a;
-    // width: 290px;
+    // width: 100px;
     // height: 120px;
+    min-width: 300px;
     margin-top: 15px;
     margin-bottom:30px;
 }
@@ -131,8 +134,7 @@
     size: 20px;
     padding: 0 25px 0 26px; 
 }
-.container3{
-    // height:100vh;
+.container3 {
     background-color:#eff9ff;
     display: grid;
     grid-template-columns:repeat(1fr) ;
@@ -205,19 +207,19 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
+    min-width: 300px;
 }
 .container_3--img {
-    width: 45px;
-    height: 45px;display: flex;
+    display: flex;
     justify-content: center;
     align-items: center;
-    background-color:#ffffff;
+    width: 45px;
+    height: 45px;
+    background-color:#faf9f9;
     border-radius: 50%;
     margin-bottom: 53px;
-    transform: translate(0, -50%);
-    position: relative;
-    left: 147px;
-   
+    transform: translate(0, -50%);   
 
 
 }
@@ -233,13 +235,19 @@
     margin-bottom: 30px;
 } 
 .nav-links {
-    text-decoration: none;
     font-family:"Roboto-Regular",sans-serif;
     font-size: 16px;
     line-height: 30px;
     color: #ffffff;
     text-transform: uppercase;
     text-align: center;
+    text-decoration: none;
+}
+.li-links{
+    
+    list-style: none;
+    
+
 }
 .footer__copy {
     text-align: center;
@@ -251,7 +259,16 @@
     margin-bottom: 45px;
 }
 
-
+/*p {
+    text-decoration: none;
+    color: blue;
+}
+p:hover {
+    color:black;
+}
+p {
+    transition: color 0.8s linear 0.2s;
+}*/
 
 
 
