--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -134,13 +134,6 @@
     }
     
 }
-// .container__button {
-//     font-family:'Roboto-Medium',sans-serif;
-//     padding: 0 25px 0 26px; 
-//     size: 20px;
-//     color:#f26002;
-    
-// }
 // grid
 .container3 {
     background-color:#eff9ff;
@@ -157,6 +150,12 @@
     font-weight: bold;
     font-size: 24px;
     text-transform: capitalize; 
+    -webkit-transition: font-size 1s ease;
+    transition: font-size 1s ease;
+    &:hover {
+        font-size:30px
+
+    }
 
 }
 .container3--item2{
@@ -221,7 +220,8 @@
 .page__footer--box1 {
  display: flex;
  justify-content: center;
- align-items: center
+ align-items: center;
+ 
 }
 
 .container_3--img {
