--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -221,7 +221,6 @@
  display: flex;
  justify-content: center;
  align-items: center;
- 
 }
 
 .container_3--img {
@@ -275,7 +274,7 @@
     margin-bottom: 45px;
 }
 
-
+// MEDIA
 
 
 /* MEDIAQUERIE TABLET */
@@ -285,17 +284,16 @@
  /* grid */
 .container3 {
     background-color:#eff9ff;
-    // display: grid;
     grid-template-columns: (1fr 1fr 1fr);
     grid-template-rows: 33vh 33vh 33vh;
     grid-gap:45px;
   }
 .container3--item1 {
-   
+
     grid-column: 1/4;
     font-size: 26px;
   }
-.container3--item2{
+.container3--item2 {
 
     grid-column: 1/2
     
@@ -329,7 +327,6 @@
     align-items: center;
     border-radius: 50%;
     margin-bottom: 53px;
-    
    }
 
 .page__footer--box2 {
@@ -342,18 +339,14 @@
 }
 }
 
-
 @media all and (min-width: 1200px) {
 
 .h1-text {
     font-size: 100px;
 }
-
 .h5-text {
-    font-size: 24px;
-    
+    font-size: 24px;   
 }
-
 }
 
 
