Add first includes

--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,4 +1,12 @@
-<header class="page__header">
-  <img src="./assets/images/logo-adalab.png" alt="Adalab">
-  <h1>@@title</h1>
+<header class="header">
+  <section class="container_1">
+    <nav class="container1__nav">
+      <a href="https://adalab.es/" target="_blank"
+        ><img
+          class="header_logo"
+          src="./assets/images/ico-menu.svg"
+          alt="Burguer button"
+      /></a>
+    </nav>
+  </section>
 </header>
