--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,40 +1,41 @@
-<main class="page__main">
-  <h2>Este es el starter kit de Adalab</h2>
-  <p>Lo usamos para aprender:</p>
-  <ul class="main__list">
-    <li>Sass</li>
-    <li>HTML partials</li>
-    <li>Gulp</li>
-    <li>y muchas cosas más</li>
-  </ul>
-  <p>Si quieres saber cúales son las rutas correctas para:</p>
-  <ul class="main__list">
-    <li>
-      una <code class="code">&lt;img /&gt;</code> mira el fichero
-      <code class="code">./src/html/partials/header.html</code>.
-    </li>
-    <li>
-      y para un <code class="code">background-image</code> mira el fichero
-      <code class="code">./src/html/scss/layout/_page.scss</code>.
-    </li>
-  </ul>
-  <p>
-    Si quieres saber cómo usar un partial HTML dentro de otro partial, busca en la carperta
-    <code class="code">./src/html/index.html</code> y
-    <code class="code">./src/html/partials/main.html</code>, y verás cómo estamos creando estos
-    enlaces:
-  </p>
-  <ul class="main__list">
-    <li>
-      <include
-        src="./link.html"
-        aClass="link__adalab"
-        text="Adalab"
-        url="https://adalab.es"
-      ></include>
-    </li>
-    <li>
-      <include src="./link.html" text="Más info del starter kit" url="./more-info.html"></include>
-    </li>
-  </ul>
+
+<main>
+  <!-- section Anonymous proxy -->
+<section class="container container_2">
+  <div class="header__text">
+    <h1 class="h1-text">Anonymous proxy</h1>
+    <h5 class="h5-text">In hac habitasse platea dictumst.</h5>
+  </div>
+  <a class="container_1--img" href="#section_reason" target="_blank"
+    ><img src="./assets/images/ico-scroll-down.svg" alt="ico-scroll-down"
+  /></a>
+
+    <!-- section Insomnia tips -->
+  <h5 class="section__container--tips"> Insomnia tips</h5>
+  <article class="section__container--title"> <h3>Looking through a window </h3></article>
+  <article class="section__container--text"> <p> Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.</p></article>
+  <article class="section__container--button ">Go</article>
+</section>
+
+<section class="container container3" id="section_reason">
+ <div class="container3--item1">
+    <h2>3 Reasons to purchase</p>
+ </div>
+ <div class="container3--item2">
+    <h3 class="container3__item2--title"> Ut sed metus</h3>
+    <p class="container3__item2--text">Lorem ipsum dolor sit amet, consectetur.</p>
+ </div>
+ <div class="container3--item3">
+   <h3 class="container3__item2--title">Curabitur ac erat</h3>
+   <p  class="container3__item2--text">Mauris mattis urna quis lorem molestie.</p>
+ </div> 
+ <div class="container3--item4">
+   <h3 class="container3__item2--title">Morbi dictum</h3>
+   <p  class="container3__item2--text">Aliquam in dolor et dolor tincidunt.</p>
+ </div>
+ <div class="container3--item5">
+   <p  class="container3__item2--button">More reasons</p>
+ </div>
+
+</section>
 </main>
