--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,11 +1,94 @@
-<footer class="page__footer">
-  <small>
-    &copy; Todos los derechos reservados
-    <include
-      src="./link.html"
-      aClass="link__adalab"
-      text="Adalab"
-      url="https://adalab.es"
-    ></include>
-  </small>
+<footer class="footer">
+  <div class="footer__box1">
+    <a class="footer__box1--img" href="#top"
+      ><img src="./assets/images/ico-arrow.svg" alt="top-page"
+    /></a>
+  </div>
+  <div class="footer__box2">
+    <nav class="footer__box2--nav">
+      <ul class="navList1">
+        <li class="navList1__li">
+          <a
+            title=""
+            class="navList1__li--link"
+            href="https://adalab.es/"
+            target="_blank"
+            >Articles</a
+          >
+        </li>
+        <li class="navList1__li">
+          <a
+            title=""
+            class="navList1__li--link"
+            href="https://adalab.es/"
+            target="_blank"
+            >Books</a
+          >
+        </li>
+        <li class="navList1__li">
+          <a
+            title=""
+            class="navList1__li--link"
+            href="https://adalab.es/"
+            target="_blank"
+            >Events</a
+          >
+        </li>
+        <li class="navList1__li">
+          <a
+            title=""
+            class="navList1__li--link"
+            href="https://adalab.es/"
+            target="_blank"
+            >Reasons</a
+          >
+        </li>
+        <li class="navList1__li">
+          <a
+            title=""
+            class="navList1__li--link"
+            href="https://adalab.es/"
+            target="_blank"
+            >Tips</a
+          >
+        </li>
+      </ul>
+    </nav>
+
+    <nav class="navList2">
+      <ul class="footer_ul">
+        <li class="navList2__li">
+          <a
+            title="Twiter"
+            class="navList2__li--link"
+            href="https://adalab.es/"
+            target="_blank"
+            >Twiter</a
+          >
+        </li>
+        <li class="navList2__li">
+          <a
+            title="Instagram"
+            class="navList2__li--link"
+            href="https://adalab.es/"
+            target="_blank"
+            >Instagram</a
+          >
+        </li>
+        <li class="navList2__li">
+          <a
+            title="Mastodon.Social"
+            class="navList2__li--link"
+            href="https://adalab.es/"
+            target="_blank"
+            >Mastodon.Social</a
+          >
+        </li>
+      </ul>
+    </nav>
+    <div class="footer__copy">
+      <small>&copy 2020</small>
+      <small>we&#128147;components</small>
+    </div>
+  </div>
 </footer>
