--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,41 +1,38 @@
 
 <main>
   <!-- section Anonymous proxy -->
-<section class="container container_2">
-  <div class="header__text">
+<section class="container1">
     <h1 class="h1-text">Anonymous proxy</h1>
     <h5 class="h5-text">In hac habitasse platea dictumst.</h5>
-  </div>
-  <a class="container_1--img" href="#section_reason" target="_blank"
+    <a class="container_1--img" href="#section_reason" target="_blank"
     ><img src="./assets/images/ico-scroll-down.svg" alt="ico-scroll-down"
-  /></a>
-
-    <!-- section Insomnia tips -->
-  <h5 class="section__container--tips"> Insomnia tips</h5>
-  <article class="section__container--title"> <h3>Looking through a window </h3></article>
-  <article class="section__container--text"> <p> Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.</p></article>
-  <article class="section__container--button ">Go</article>
+    /></a>
 </section>
 
-<section class="container container3" id="section_reason">
- <div class="container3--item1">
-    <h2>3 Reasons to purchase</p>
- </div>
- <div class="container3--item2">
-    <h3 class="container3__item2--title"> Ut sed metus</h3>
-    <p class="container3__item2--text">Lorem ipsum dolor sit amet, consectetur.</p>
- </div>
- <div class="container3--item3">
-   <h3 class="container3__item2--title">Curabitur ac erat</h3>
-   <p  class="container3__item2--text">Mauris mattis urna quis lorem molestie.</p>
- </div> 
- <div class="container3--item4">
-   <h3 class="container3__item2--title">Morbi dictum</h3>
-   <p  class="container3__item2--text">Aliquam in dolor et dolor tincidunt.</p>
- </div>
- <div class="container3--item5">
-   <p  class="container3__item2--button">More reasons</p>
- </div>
+    <!-- section Insomnia tips -->
+<section>
+  <h5 class="section__container--tips"> Insomnia tips</h5>
+  <h6 class="section__container--title"> Looking through a window </h6>
+  <p class="section__container--text">  Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.</p>
+  <button class="section__container--button ">Go</button>
+</section>
 
+ <!-- section 3 Reasons to purchase -->
+<section class="container container3" id="section_reason">
+ 
+    <h2 class="container3--item1">3 Reasons to purchase</p>
+    <article class="container3--item2">
+       <h3 class="container3__item2--title"> Ut sed metus</h3>
+       <p class="container3__item2--text">Lorem ipsum dolor sit amet, consectetur.</p>
+    </article>
+    <article class="container3--item3">
+      <h3 class="container3__item2--title">Curabitur ac erat</h3>
+      <p  class="container3__item2--text">Mauris mattis urna quis lorem molestie.</p>
+    </article> 
+    <article class="container3--item4">
+     <h3 class="container3__item2--title">Morbi dictum</h3>
+     <p  class="container3__item2--text">Aliquam in dolor et dolor tincidunt.</p>
+    </article>
+     <button  class="container3__item2--button">More reasons</button>
 </section>
 </main>
