Add @media for main.scss

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -2,19 +2,19 @@
 <main>
   <!-- section Anonymous proxy -->
 <section class="container1">
-    <h1 class="h1-text">Anonymous proxy</h1>
-    <h5 class="h5-text">In hac habitasse platea dictumst.</h5>
-    <a class="container_1--img" href="#section_reason" target="_blank"
+    <h1 class="container1__title">Anonymous proxy</h1>
+    <h5 class="container1__text">In hac habitasse platea dictumst.</h5>
+    <a class="container1__img" href="#section_reason" target="_blank"
     ><img src="./assets/images/ico-scroll-down.svg" alt="ico-scroll-down"
     /></a>
 </section>
 
     <!-- section Insomnia tips -->
-<section>
-  <h5 class="section__container--tips"> Insomnia tips</h5>
-  <h6 class="section__container--title"> Looking through a window </h6>
-  <p class="section__container--text">  Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.</p>
-  <button class="section__container--button ">Go</button>
+<section class="container2">
+  <h5 class="container2--title1"> Insomnia tips</h5>
+  <h6 class="container2--title2"> Looking through a window </h6>
+  <p class="container2--text">  Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.</p>
+  <button class="container2--button">Go</button>
 </section>
 
  <!-- section 3 Reasons to purchase -->
