--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -4,9 +4,9 @@ $color-lightblue: #8ccbea;
 $color-black: #000000;
 $color-greyish-brown: #4a4a4a;
 $color-orange: #f26002;
-$bg-color-reasons: #eff9ff;
-$bg-color-footer: #304268;
-$bg-color-header: #0271bc;
+$color-reasons: #eff9ff;
+$color-footer: #304268;
+$color-header: #0271bc;
 
 //fonts
 
