Add grid with @media

--- a/src/html/partials/main.html
+++ b/src/html/partials/main.html
@@ -1,38 +1,45 @@
-
 <main>
   <!-- section Anonymous proxy -->
-<section class="container1">
+  <section class="container1">
     <h1 class="container1__title">Anonymous proxy</h1>
     <h5 class="container1__text">In hac habitasse platea dictumst.</h5>
     <a class="container1__img" href="#section_reason" target="_blank"
-    ><img src="./assets/images/ico-scroll-down.svg" alt="ico-scroll-down"
+      ><img src="./assets/images/ico-scroll-down.svg" alt="ico-scroll-down"
     /></a>
-</section>
+  </section>
 
-    <!-- section Insomnia tips -->
-<section class="container2">
-  <h5 class="container2--title1"> Insomnia tips</h5>
-  <h6 class="container2--title2"> Looking through a window </h6>
-  <p class="container2--text">  Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at luctus ex diam nec lectus. Vivamus semper sodales rutrum.</p>
-  <button class="container2--button">Go</button>
-</section>
+  <!-- section Insomnia tips -->
+  <section class="container2">
+    <h5 class="container2--title1">Insomnia tips</h5>
+    <h6 class="container2--title2">Looking through a window</h6>
+    <p class="container2--text">
+      Donec accumsan, nulla ut volutpat porttitor, quam odio tempus felis, at
+      luctus ex diam nec lectus. Vivamus semper sodales rutrum.
+    </p>
+    <button class="container2--button">Go</button>
+  </section>
 
- <!-- section 3 Reasons to purchase -->
-<section class="container container3" id="section_reason">
- 
-    <h2 class="container3--item1">3 Reasons to purchase</p>
-    <article class="container3--item2">
-       <h3 class="container3__item2--title"> Ut sed metus</h3>
-       <p class="container3__item2--text">Lorem ipsum dolor sit amet, consectetur.</p>
+  <!-- section 3 Reasons to purchase -->
+  <section class="container3" id="section_reason">
+    <h2 class="container3__item1">3 Reasons to purchase</h2>
+    <article class="container3__item2">
+      <h3 class="container3__item2--title">Ut sed metus</h3>
+      <p class="container3__item2--text">
+        Lorem ipsum dolor sit amet, consectetur.
+      </p>
     </article>
-    <article class="container3--item3">
+    <article class="container3__item3">
       <h3 class="container3__item2--title">Curabitur ac erat</h3>
-      <p  class="container3__item2--text">Mauris mattis urna quis lorem molestie.</p>
-    </article> 
-    <article class="container3--item4">
-     <h3 class="container3__item2--title">Morbi dictum</h3>
-     <p  class="container3__item2--text">Aliquam in dolor et dolor tincidunt.</p>
+      <p class="container3__item2--text">
+        Mauris mattis urna quis lorem molestie.
+      </p>
     </article>
-     <button  class="container3__item2--button">More reasons</button>
-</section>
+    <article class="container3__item4">
+      <h3 class="container3__item2--title">Morbi dictum</h3>
+      <p class="container3__item2--text">
+        Aliquam in dolor et dolor tincidunt.
+      </p>
+    </article>
+    <button class="container3__item5--button">More reasons</button>
+  </section>
 </main>
