--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,74 +4,74 @@
 @import "layout/main";
 @import "layout/footer";
 
-/* .page is de class of <div class="page" id="top">*/
+// /* .page is de class of <div class="page" id="top">*/
 
-.page {
-  margin: 0;
-}
-// MEDIA
+// .page {
+//   margin: 0;
+// }
+// // MEDIA
 
-/* MEDIAQUERIE TABLET */
-@media all and (min-width: 768px) {
-  /* grid */
-  .container3 {
-    background-color: #eff9ff;
-    grid-template-columns: (1fr 1fr 1fr);
-    grid-template-rows: 33vh 33vh 33vh;
-    grid-gap: 45px;
-  }
-  .container3--item1 {
-    grid-column: 1/4;
-    font-size: 26px;
-  }
-  .container3--item2 {
-    grid-column: 1/2;
-  }
-  .container3--item3 {
-    grid-column: 2/3;
-  }
-  .container3--item4 {
-    grid-column: span 1;
-  }
+// /* MEDIAQUERIE TABLET */
+// @media all and (min-width: 768px) {
+//   /* grid */
+//   .container3 {
+//     background-color: #eff9ff;
+//     grid-template-columns: (1fr 1fr 1fr);
+//     grid-template-rows: 33vh 33vh 33vh;
+//     grid-gap: 45px;
+//   }
+//   .container3--item1 {
+//     grid-column: 1/4;
+//     font-size: 26px;
+//   }
+//   .container3--item2 {
+//     grid-column: 1/2;
+//   }
+//   .container3--item3 {
+//     grid-column: 2/3;
+//   }
+//   .container3--item4 {
+//     grid-column: span 1;
+//   }
 
-  .container3--item5 {
-    grid-column: 2/3;
-    grid-row-start: 3;
-    grid-row-end: 4;
-  }
-  .container3__item2--title {
-    font-size: 24px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-  .container3__item2--text {
-    font-size: 20px;
-    margin-left: 0;
-    margin-right: 0;
-  }
+//   .container3--item5 {
+//     grid-column: 2/3;
+//     grid-row-start: 3;
+//     grid-row-end: 4;
+//   }
+//   .container3__item2--title {
+//     font-size: 24px;
+//     margin-left: 0;
+//     margin-right: 0;
+//   }
+//   .container3__item2--text {
+//     font-size: 20px;
+//     margin-left: 0;
+//     margin-right: 0;
+//   }
 
-  .page__footer--box1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    margin-bottom: 53px;
-  }
+//   .page__footer--box1 {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     border-radius: 50%;
+//     margin-bottom: 53px;
+//   }
 
-  .page__footer--box2 {
-    width: 100%;
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: space-around;
-    align-items: center;
-  }
-}
+//   .page__footer--box2 {
+//     width: 100%;
+//     display: flex;
+//     flex-direction: row-reverse;
+//     justify-content: space-around;
+//     align-items: center;
+//   }
+// }
 
-@media all and (min-width: 1200px) {
-  .h1-text {
-    font-size: 100px;
-  }
-  .h5-text {
-    font-size: 24px;
-  }
-}
+// @media all and (min-width: 1200px) {
+//   .h1-text {
+//     font-size: 100px;
+//   }
+//   .h5-text {
+//     font-size: 24px;
+//   }
+// }
