Add footer with @media

--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -5,7 +5,7 @@
     /></a>
   </div>
   <div class="footer__box2">
-    <nav class="footer__box2--nav">
+    <nav class="footer__box2--nav1">
       <ul class="navList1">
         <li class="navList1__li">
           <a
