--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,7 +1,6 @@
 /* header */
 
 .header {
-  background-image: url("../images/cover.jpg");
   background-position: top;
   background-repeat: no-repeat;
   min-width: 300px;
@@ -18,6 +17,7 @@
 
 .container1__nav {
   position: fixed;
+  z-index: 1;
   top: 0px;
   left: 0px;
   width: 44px;
