--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -2,10 +2,10 @@
 // container1
 
 .container1 {
-  // justify-content: center;
-  // text-align: center;
   background: url("../images/cover.jpg");
   background-size: cover;
+  position: relative;
+  top: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -138,14 +138,14 @@
 // grid
 .container3 {
   width: 100%;
-  height: 600px;
+  height: 620px;
   background-color: $color-reasons;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 40px 100px 40px;
+
   @media all and (min-width: 768px) {
     height: 390px;
-    // grid-template-rows: 33vh 33vh 33vh;
+    grid-template-rows: 23vh 24vh 15vh;
   }
   @media all and (min-width: 1200px) {
     height: 420px;
@@ -179,29 +179,66 @@
   &__item2 {
     text-align: center;
     grid-column: 1/4;
+    margin: auto;
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 30px;
     &--title {
       font-family: $font-second;
       font-weight: bold;
-      margin-left: 53px;
-      margin-right: 53px;
-      font-size: 18px;
+      margin: auto;
+      height: 30px;
+      width: 184px;
       color: $color-black;
     }
     &--text {
       font-family: $font-main;
-      font-size: 18px;
       color: $color-black;
-      margin-left: 55px;
-      margin-right: 55px;
+      margin-left: 53px;
+      margin-right: 53px;
+      height: 30px;
+      width: 180px;
     }
+    @media all and (min-width: 768px) {
+      grid-column: 1/2;
+    }
+    // @media all and (min-width: 1200px) {
+    //   height: 45px;
+    //   width: 730px;
+    //   margin-top: 60px;
+    // }
   }
   &__item3 {
     text-align: center;
     grid-column: 1/4;
+    margin: auto;
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 30px;
+    @media all and (min-width: 768px) {
+      grid-column: 2/2;
+    }
+    // @media all and (min-width: 1200px) {
+    //   height: 45px;
+    //   width: 730px;
+    //   margin-top: 60px;
+    // }
   }
   &__item4 {
     text-align: center;
     grid-column: 1/4;
+    margin: auto;
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 30px;
+    @media all and (min-width: 768px) {
+      grid-column: 3/4;
+    }
+    // @media all and (min-width: 1200px) {
+    //   height: 45px;
+    //   width: 730px;
+    //   margin-top: 60px;
+    // }
   }
   &__item5--button {
     width: 200px;
@@ -213,8 +250,10 @@
     font-size: 20px;
     font-family: "Roboto-Medium", sans-serif;
     border: 2px solid $color-orange;
-    padding: 10px 30px;
     border-radius: 23px;
     margin: auto;
+    @media all and (min-width: 768px) {
+      margin-bottom: 15px;
+    }
   }
 }
