--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -31,7 +31,7 @@
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
-    width: 700px;
+    width: 100%;
   }
 }
 
